# VanillaNet-cpp

./: .gitignore  CMakeLists.txt  VanillaNet-cpp
.github/: README.md  checkbyhand.md  doc.md
Resources/output/weights/: mnist_fc128_relu_fc10_log_softmax.pt  mnist_fc128_relu_fc10_log_softmax_weights_biases.json  mnist_fc128_relu_fc10_sigmoid.pt  mnist_fc128_relu_fc10_sigmoid_weights_biases.json  mnist_fc128_relu_fc10_softmax_weights_biases.json  test.json
Resources/output/weights/09_08_24/: fc3_ReLU_fc2_Softmax_09_08_24_14_27_42.json
Resources/train_mnist_pt/: fashion_fc128_relu_fc10_softmax.pt  mnist.py
include/: lossFunctions.hpp  test.hpp  train.hpp
include/extractor/: imageExtractor.hpp  weightsBiasExtractor.hpp
include/network/: activation.hpp  layer.hpp  layer2.hpp  network.hpp  neuron.hpp  neuron2.hpp
include/utils/: printer.hpp  saveToJson.hpp  tester.hpp  toolkit.hpp
src/: lossFunctions.cpp  main.cpp  test.cpp  train.cpp
src/extractor/: imageExtractor.cpp  weightsBiasExtractor.cpp
src/network/: activation.cpp  layer.cpp  layer2.cpp  network.cpp  neuron.cpp  neuron2.cpp
src/scripts/: ptToJson.py
src/scripts/train_mnist_pt/: mnist_fc128_relu_fc10_softmax.pt
src/utils/: printer.cpp  saveToJson.cpp  tester.cpp  toolkit.cpp
